# TCRMD

./: .gitignore  Dockerfile  README.md  env.yaml  pyproject.toml  run_pipeline.py
.github/workflows/: 01_sequence_to_structure.yml  02_system_preparation.yml  03_simulate.yml  04_inference_analytics.yml  main.yml
apptainer/: inference_analytics.def  sequence_to_structure.def  simulate.def  system_preparation.def
docker/: inference_analytics.Dockerfile  sequence_to_structure.Dockerfile  simulate.Dockerfile  system_preparation.Dockerfile
docker/inference_analytics/: Dockerfile
docker/sequence_to_structure/: Dockerfile
docker/simulate/: Dockerfile
docker/system_preparation/: Dockerfile
docs/: hpc_apptainer_guide.md  vignette_01_sequence_to_structure.md  vignette_02_system_preparation.md  vignette_03_simulation.md  vignette_04_inference_analytics.md
envs/: inference_analytics.yaml  sequence_to_structure.yaml  simulate.yaml  system_preparation.yaml
tcrmd/: __init__.py  inference_analytics.py  sequence_to_structure.py  simulate.py  system_preparation.py
tests/: test_inference_analytics.py  test_run_pipeline.py  test_sequence_to_structure.py  test_simulate.py  test_system_preparation.py
tests/data/: sequences.json
